# vibe_attribute

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
attribute/: __init__.py  cli.py  editor.py  export.py  gui.py  metadata.py  models.py  tui.py
tests/: __init__.py  conftest.py  test_cli.py  test_export.py  test_metadata.py  test_models.py
